# chembl_indication_evaluation_poc

./: .gitignore  README.md  conftest.py  pyproject.toml
chind_eval/: __init__.py  __main__.py  chembl_treatments.py  config.py  model.py  persistence.py  prompts.py  test_cli.py  utils.py
tests/: test_analysis_results.py  test_chembl_treatments.py  test_evaluation_results.py  test_import.py  test_model.py  test_persistence.py  test_prompts.py  test_utils.py
